fixed navbars on pages to be more consistent

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,11 @@ nav {
     max-height: 6rem;
 }
 
+.navbar-brand img {
+    width: 30px;
+    height: 30px;
+}
+
 #splash-page {
     min-height: calc(100vh - 6rem);
     position: relative;
