added in style to have display 5 recipe images in a row

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,18 @@ nav {
     background-color: rgba(0, 13, 25, 1);
 }
 
+.modal-dialog {
+    max-width: calc(100% - 3rem);
+}
+
+.modal-dialog .recipeImg {
+    max-width: 20%;
+}
+
+.recipeImg img {
+    max-width: 100%;
+}
+
 /* Media query for styles on mobile. */
 @media only screen and (max-width: 576px) {
     #splash-page .row {
