moved some recipe card code to map.html and updated recipe card to be shown/hidden when a recipe is selected/closed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,10 +85,19 @@ nav {
 
 .modal-dialog .recipeImg {
     max-width: 20%;
+    cursor: pointer;
 }
 
 .recipeImg img {
     max-width: 100%;
+}
+
+#recipeSpace {
+    display: none;
+}
+
+#recipeSpace .card-header {
+    font-weight: 700;
 }
 
 /* Media query for styles on mobile. */
