--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,11 @@ nav {
     font-weight: 700;
 }
 
+#logo {
+    width: 125px;
+    height: 60px;
+}
+
 /* Media query for styles on mobile. */
 @media only screen and (max-width: 576px) {
     #splash-page .row {
