--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ nav {
 #regional-page #vmap {
     width: auto;
     height: 500px;
+    opacity: 0.8;
 }
 
 #vmap .jqvmap-zoomin, #vmap .jqvmap-zoomout {
@@ -77,6 +78,7 @@ nav {
     height: 15px;
     color: rgba(255, 252 , 240, 1);
     background-color: rgba(0, 13, 25, 1);
+    
 }
 
 .modal-dialog {
@@ -105,6 +107,8 @@ nav {
     height: 60px;
 }
 
+
+    
 /* Media query for styles on mobile. */
 @media only screen and (max-width: 576px) {
     #splash-page .row {
